crates/ty_python_semantic/resources/mdtest/snapshots/union_call.md_-_Calling_a_union_of_f…_-_A_shared_generated_i…_(d05edde91b949f0b).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: union_call.md - Calling a union of function types - A shared generated initializer under a custom metaclass
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/union_call.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from dataclasses import dataclass
 2 | 
 3 | class Meta(type):
 4 |     def __call__(cls, *args, **kwargs): ...
 5 | 
 6 | @dataclass
 7 | class Base(metaclass=Meta):
 8 |     nullable: bool
 9 | 
10 | class Child(Base): ...
11 | 
12 | def convert(condition: bool):
13 |     # error: [invalid-argument-type]
14 |     return (Child if condition else Base)(nullable=None)
15 | @dataclass
16 | class GenericBase[T](metaclass=Meta):
17 |     value: T
18 | 
19 | class IntChild(GenericBase[int]): ...
20 | class StrChild(GenericBase[str]): ...
21 | 
22 | def specialized(condition: bool):
23 |     # error: [invalid-argument-type] "Expected `int`, found `None`"
24 |     # error: [invalid-argument-type] "Expected `str`, found `None`"
25 |     return (IntChild if condition else StrChild)(value=None)
```

# Diagnostics

```
error[invalid-argument-type]: Argument is incorrect
  --> src/mdtest_snippet.py:14:43
   |
14 |     return (Child if condition else Base)(nullable=None)
   |                                           ^^^^^^^^^^^^^ Expected `bool`, found `None`

```

```
error[invalid-argument-type]: Argument is incorrect
  --> src/mdtest_snippet.py:25:50
   |
25 |     return (IntChild if condition else StrChild)(value=None)
   |                                                  ^^^^^^^^^^ Expected `int`, found `None`

```

```
error[invalid-argument-type]: Argument is incorrect
  --> src/mdtest_snippet.py:25:50
   |
25 |     return (IntChild if condition else StrChild)(value=None)
   |                                                  ^^^^^^^^^^ Expected `str`, found `None`

```
