crates/ty_python_semantic/resources/mdtest/snapshots/unpacking.md_-_Unpacking_-_Exactly_too_many_val…_(a53a2aec02bc999).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: unpacking.md - Unpacking - Exactly too many values to unpack
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unpacking.md
---

# Python source files

## mdtest_snippet.py

```
1 | a, b = (1, 2, 3)  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Too many values to unpack
 --> src/mdtest_snippet.py:1:1
  |
1 | a, b = (1, 2, 3)  # error: [invalid-assignment]
  | ^^^^   --------- Got 3
  | |
  | Expected 2
  |

```
