crates/ty_python_semantic/resources/mdtest/snapshots/unpacking.md_-_Unpacking_-_Right_hand_side_not_…_(fae6e2d526396252).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: unpacking.md - Unpacking - Right hand side not iterable
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unpacking.md
---

# Python source files

## mdtest_snippet.py

```
1 | a, b = 1  # error: [not-iterable]
```

# Diagnostics

```
error[not-iterable]: Object of type `Literal[1]` is not iterable
 --> src/mdtest_snippet.py:1:8
  |
1 | a, b = 1  # error: [not-iterable]
  |        ^
  |
info: It doesn't have an `__iter__` method or a `__getitem__` method

```
